# pixelfun

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md
_src/: application.cpp  main.cpp
cmake/: mingw64.cmake  x86_64-w64-mingw32.cmake
examples/: p5-style.js  pixelfun.js
libquickjs/: CMakeLists.txt  README.md
packaging/dmg/: AppDMGSetup.scpt
scripts/: install-sdl2-mingw-cross.sh  mingw-build.sh
src/: application.cpp  application.h  color.hpp  icanvas.h  irenderer.h  iscriptenv.h  main.cpp  quickjsenv.cpp  quickjsenv.h  quickjspp.hpp  sdlrenderer.cpp  sdlrenderer.h
src/app/: CMakeLists.txt
src/app/Manifests/: Info.plist
src/app/cmake/packaging/: Darwin.cmake
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  GLTex.cpp  GLTex.hpp  PixelFunEngine.cpp  PixelFunEngine.hpp  Window.hpp
src/core/Platform/Mac/: DPIHandler.cpp
